--- a/src/website/index.html
+++ b/src/website/index.html
@@ -4,7 +4,8 @@
   </head>
   <body style="width:100%;height:100%;margin:0">
     <div id="app" style="width:100%;height:100%">
-      Hello, world!
+      Loading...
     </div>
+    <script src="index.js" > </script>
   </body>
 </html>
